force-app/main/default/objects/Account/fields/CC_Mailing_Address_Same__c.field-meta.xml
<CustomField>
    <fullName>CC_Mailing_Address_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if mailing address is same as billing address</description>
    <label>Mailing Address Same</label>
    <type>Checkbox</type>
</CustomField>