force-app/main/default/objects/Account/fields/CC_Maximum_Age_Limit_Requested_Months__c.field-meta.xml
<CustomField>
    <fullName>CC_Maximum_Age_Limit_Requested_Months__c</fullName>
    <label>Maximum Age Limit Requested - Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>