force-app/main/default/objects/Account/fields/CC_Military_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Military_Status__c</fullName>
    <label>Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not in the Military</fullName>
            </value>
            <value>
                <fullName>Active Duty US Military</fullName>
            </value>
            <value>
                <fullName>National Guard/Military Reserve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>