force-app/main/default/objects/Account/fields/CC_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Name__c</fullName>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>