force-app/main/default/objects/Account/fields/CC_Name_of_Individual_being_paid__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_of_Individual_being_paid__c</fullName>
    <label>Name of Individual being paid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>