force-app/main/default/objects/Account/fields/CC_Need_overnight_care_for_the_child__c.field-meta.xml
<CustomField>
    <fullName>CC_Need_overnight_care_for_the_child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need overnight care for the child</label>
    <type>Checkbox</type>
</CustomField>