force-app/main/default/objects/Account/fields/CC_Newly_Created_Member__c.field-meta.xml
<CustomField>
    <fullName>CC_Newly_Created_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is used to check if any New Member is added in the application flow</description>
    <label>Newly Created Member</label>
    <type>Checkbox</type>
</CustomField>