force-app/main/default/objects/Account/fields/CC_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Notification_Email__c</fullName>
    <label>CC Notification Email</label>
    <type>Email</type>
</CustomField>