force-app/main/default/objects/Account/fields/CC_Office_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Office_Phone_Number__c</fullName>
    <label>Office Phone Number</label>
    <type>Phone</type>
</CustomField>