force-app/main/default/objects/Account/fields/CC_Open_CSED_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Open_CSED_Case_Number__c</fullName>
    <label>Open CSED Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>