force-app/main/default/objects/Account/fields/CC_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop-in</fullName>
            </value>
            <value>
                <fullName>School-age</fullName>
            </value>
            <value>
                <fullName>Head Start</fullName>
            </value>
            <value>
                <fullName>Early Head Start</fullName>
            </value>
            <value>
                <fullName>School Age Program</fullName>
            </value>
            <value>
                <fullName>Regular care</fullName>
            </value>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>Half Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>