force-app/main/default/objects/Account/fields/CC_Orientation_Completed__c.field-meta.xml
<CustomField>
    <fullName>CC_Orientation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates business added after completing orientation</description>
    <label>Orientation Completed ?</label>
    <type>Checkbox</type>
</CustomField>