force-app/main/default/objects/Account/fields/CC_Other_AssistanceProgram_Participation__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_AssistanceProgram_Participation__c</fullName>
    <label>Other Assistance Program Participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SNAP (Food Stamps)</fullName>
            </value>
            <value>
                <fullName>TANF (temporary assistance for needy families)</fullName>
            </value>
            <value>
                <fullName>Housing Voucher</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>LIHEAP (Energy Assistance)</fullName>
                <isActive>false</isActive>
                <label>LIHEAP (Energy Assistance)</label>
            </value>
            <value>
                <fullName>Low-Income Housing (HUD/Section 8)</fullName>
                <isActive>false</isActive>
                <label>Low-Income Housing (HUD/Section 8)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>