force-app/main/default/objects/Account/fields/CC_Other_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Business_Type__c</fullName>
    <description>Used when &apos;Other&apos; is selected for Business Type</description>
    <label>Other Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>