force-app/main/default/objects/Account/fields/CC_Other_Do_You__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Do_You__c</fullName>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>