force-app/main/default/objects/Account/fields/CC_Out_Of_State_Location__c.field-meta.xml
<CustomField>
    <fullName>CC_Out_Of_State_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out Of State Location</label>
    <type>Checkbox</type>
</CustomField>