force-app/main/default/objects/Account/fields/CC_Overridden_Total_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>CC_Overridden_Total_Household_Income__c</fullName>
    <label>Overridden Total Household Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>