force-app/main/default/objects/Account/fields/CC_Owner_Co_Owner__c.field-meta.xml
<CustomField>
    <fullName>CC_Owner_Co_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner/Co-Owner</label>
    <type>Checkbox</type>
</CustomField>