force-app/main/default/objects/Account/fields/CC_Owner_Director_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Owner_Director_Phone_Number__c</fullName>
    <label>Owner Director Phone Number</label>
    <type>Phone</type>
</CustomField>