force-app/main/default/objects/Account/fields/CC_Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doing Business as</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>