force-app/main/default/objects/Account/fields/CC_Parents_always_have_access_to_kids__c.field-meta.xml
<CustomField>
    <fullName>CC_Parents_always_have_access_to_kids__c</fullName>
    <inlineHelpText>Do parents have access to their children at all times?</inlineHelpText>
    <label>Parents always have access to kids</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>