force-app/main/default/objects/Account/fields/CC_Payment_Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Payment_Vendor_Number__c</fullName>
    <label>Payment Vendor Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>