force-app/main/default/objects/Account/fields/CC_Person_ID__c.field-meta.xml
<CustomField>
    <fullName>CC_Person_ID__c</fullName>
    <displayFormat>P-{00000}</displayFormat>
    <label>Person ID</label>
    <type>AutoNumber</type>
</CustomField>