force-app/main/default/objects/Account/fields/CC_Person_Id_Dm__c.field-meta.xml
<CustomField>
    <fullName>CC_Person_Id_Dm__c</fullName>
    <label>Person Id Dm</label>
    <length>22</length>
    <type>Text</type>
</CustomField>