force-app/main/default/objects/Account/fields/CC_Person_SSN_Verify_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Person_SSN_Verify_Date__c</fullName>
    <label>Person SSN Verify Date</label>
    <type>Date</type>
</CustomField>