force-app/main/default/objects/Account/fields/CC_Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>CC_Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>