force-app/main/default/objects/Account/fields/CC_Physical_Exam_Date_Verification_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Physical_Exam_Date_Verification_Type__c</fullName>
    <label>Physical Exam Date Verification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collateral Contact</fullName>
            </value>
            <value>
                <fullName>Client Statement</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
            <value>
                <fullName>Agency Verified</fullName>
            </value>
            <value>
                <fullName>Pediatric Health Statement</fullName>
            </value>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Visually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>