force-app/main/default/objects/Account/fields/CC_Post_Orientation_Completed__c.field-meta.xml
<CustomField>
    <fullName>CC_Post_Orientation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Orientation Completed?</label>
    <type>Checkbox</type>
</CustomField>