force-app/main/default/objects/Account/fields/CC_Provider_Id_Dm__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_Id_Dm__c</fullName>
    <label>Provider Id Dm</label>
    <length>22</length>
    <type>Text</type>
</CustomField>