force-app/main/default/objects/Account/fields/CC_Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_Status__c</fullName>
    <label>CAPS Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Not Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>