force-app/main/default/objects/Account/fields/CC_Provider_trained_in_First_Aid_and_CPR__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_trained_in_First_Aid_and_CPR__c</fullName>
    <inlineHelpText>Is the provider trained in First Aid and CPR?</inlineHelpText>
    <label>Provider trained in First Aid and CPR?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>