force-app/main/default/objects/Account/fields/CC_PS_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_PS_Number__c</fullName>
    <displayFormat>PS{00000}</displayFormat>
    <label>PS Number</label>
    <type>AutoNumber</type>
</CustomField>