force-app/main/default/objects/Account/fields/CC_Public_Complaint_Role__c.field-meta.xml
<CustomField>
    <fullName>CC_Public_Complaint_Role__c</fullName>
    <label>Public Complaint Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Respondent</fullName>
            </value>
            <value>
                <fullName>Complainant</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Other Entity</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Original Submitted Respondent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>