force-app/main/default/objects/Account/fields/CC_PV_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_PV_Number__c</fullName>
    <displayFormat>PV{00000}</displayFormat>
    <label>PV Number</label>
    <type>AutoNumber</type>
</CustomField>