force-app/main/default/objects/Account/fields/CC_PV_Number_dm__c.field-meta.xml
<CustomField>
    <fullName>CC_PV_Number_dm__c</fullName>
    <label>PV Number dm</label>
    <length>22</length>
    <type>Text</type>
</CustomField>