force-app/main/default/objects/Account/fields/CC_QRIS_participation_Level__c.field-meta.xml
<CustomField>
    <fullName>CC_QRIS_participation_Level__c</fullName>
    <label>QRIS participation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Not enrolled</fullName>
                <default>true</default>
                <label>Not enrolled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>