force-app/main/default/objects/Account/fields/CC_Race_or_Origin__c.field-meta.xml
<CustomField>
    <fullName>CC_Race_or_Origin__c</fullName>
    <label>Race or Origin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>American Native</fullName>
            </value>
            <value>
                <fullName>Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>