force-app/main/default/objects/Account/fields/CC_Reason_for_child_care_assistance__c.field-meta.xml
<CustomField>
    <fullName>CC_Reason_for_child_care_assistance__c</fullName>
    <inlineHelpText>What is the primary reason that you need child care assistance?</inlineHelpText>
    <label>Reason for child care assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Training/Education</fullName>
            </value>
            <value>
                <fullName>Both Employment and Training/Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>