force-app/main/default/objects/Account/fields/CC_Referral_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Referral_Application_Type__c</fullName>
    <label>Referral Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Referral_Application_Type</valueSetName>
    </valueSet>
</CustomField>