force-app/main/default/objects/Account/fields/CC_Registeration_Fee__c.field-meta.xml
<CustomField>
    <fullName>CC_Registeration_Fee__c</fullName>
    <label>Registration Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>