force-app/main/default/objects/Account/fields/CC_Rent_Own__c.field-meta.xml
<CustomField>
    <fullName>CC_Rent_Own__c</fullName>
    <label>Rent/Own</label>
    <length>10</length>
    <type>Text</type>
</CustomField>