force-app/main/default/objects/Account/fields/CC_Representative_a_household_member__c.field-meta.xml
<CustomField>
    <fullName>CC_Representative_a_household_member__c</fullName>
    <inlineHelpText>Is the Authorized Representative a household member?</inlineHelpText>
    <label>Representative a household member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>