force-app/main/default/objects/Account/fields/CC_Reservation__c.field-meta.xml
<CustomField>
    <fullName>CC_Reservation__c</fullName>
    <label>Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flathead</fullName>
            </value>
            <value>
                <fullName>Blackfeet</fullName>
            </value>
            <value>
                <fullName>Rocky Boy</fullName>
            </value>
            <value>
                <fullName>Fort Belknap</fullName>
            </value>
            <value>
                <fullName>Fort Peck</fullName>
            </value>
            <value>
                <fullName>Crow</fullName>
            </value>
            <value>
                <fullName>Northern Cheyenne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>