force-app/main/default/objects/Account/fields/CC_Residency_Indicator__c.field-meta.xml
<CustomField>
    <fullName>CC_Residency_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residency Indicator</label>
    <type>Checkbox</type>
</CustomField>