force-app/main/default/objects/Account/fields/CC_Residency_Verify_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Residency_Verify_Date__c</fullName>
    <label>Residency Verify Date</label>
    <type>Date</type>
</CustomField>