force-app/main/default/objects/Account/fields/CC_Resides_on_Reservation__c.field-meta.xml
<CustomField>
    <fullName>CC_Resides_on_Reservation__c</fullName>
    <label>Resides on Reservation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>