force-app/main/default/objects/Account/fields/CC_School_schedule_consistent__c.field-meta.xml
<CustomField>
    <fullName>CC_School_schedule_consistent__c</fullName>
    <inlineHelpText>Is this household member&apos;s school schedule a set (consistent) schedule?</inlineHelpText>
    <label>School schedule consistent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>