force-app/main/default/objects/Account/fields/CC_Shared_custody_agreement_for_child__c.field-meta.xml
<CustomField>
    <fullName>CC_Shared_custody_agreement_for_child__c</fullName>
    <label>Shared custody agreement for child?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>