force-app/main/default/objects/Account/fields/CC_Shipping_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>CC_Shipping_Apt_Suite__c</fullName>
    <description>Stores business/facility/home mailing Apt/Suite</description>
    <label>Shipping Apt/Suite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>