force-app/main/default/objects/Account/fields/CC_Shipping_County_Other__c.field-meta.xml
<CustomField>
    <fullName>CC_Shipping_County_Other__c</fullName>
    <description>Stores business/facility/home mailing county if other is selected</description>
    <label>Shipping County(Other)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>