force-app/main/default/objects/Account/fields/CC_Special_Needs_Explaination__c.field-meta.xml
<CustomField>
    <fullName>CC_Special_Needs_Explaination__c</fullName>
    <label>Special Needs Explaination</label>
    <type>TextArea</type>
</CustomField>