force-app/main/default/objects/Account/fields/CC_SSN__c.field-meta.xml
<CustomField>
    <fullName>CC_SSN__c</fullName>
    <description>Stores encrypt SSN number</description>
    <label>SSN</label>
    <length>9</length>
    <maskChar>asterisk</maskChar>
    <maskType>ssn</maskType>
    <type>EncryptedText</type>
</CustomField>