force-app/main/default/objects/Account/fields/CC_State_FIPS_Code__c.field-meta.xml
<CustomField>
    <fullName>CC_State_FIPS_Code__c</fullName>
    <label>State FIPS Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>