force-app/main/default/objects/Account/fields/CC_State_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_State_Name__c</fullName>
    <label>State Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>