force-app/main/default/objects/Account/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <description>Indicates if business is active or in pending approval status</description>
    <label>Business Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Information Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>