force-app/main/default/objects/Account/fields/CC_Student_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Student_Status__c</fullName>
    <label>Student Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>